@startuml

class MediaContent {
    +name: str
    +genre: str
    +release_year: int
    +creator: str
    +__init__(name: str, genre: str, release_year: int, creator: str)
    +__str__(): str
    +to_dict(): dict
}

class Movie {
    +__init__(name: str, genre: str, release_year: int, creator: str)
    +__str__(): str
}

class TVShow {
    +__init__(name: str, genre: str, release_year: int, creator: str, season: int, series: int)
    +__str__(): str
    +to_dict(): dict
}

class Music {
    +__init__(name: str, genre: str, release_year: int, creator: str, album: str)
    +__str__(): str
    +to_dict(): dict
}

class CommandHandler {
    +__init__(catalog, ui, categories, genres, music_genres, attributes)
    +execute_command(command: int)
    +add_content()
    +edit_content()
    +remove_content()
    +search_content()
    +display_catalog()
    +exit_program()
}

class CatalogManager {
    +__init__(catalog, categories, genres, music_genres)
    +add(category)
    +edit(category)
    +remove(category)
    +search(category, attribute, search_value)
    +display()
}

class UserInterface {
    +get_user_input()
    +console_output()
    +console_output_error()
    +get_user_choice()
    +validate_year()
    +validate_positive_number()
    +get_valid_input()
    +select_item_from_list()
}

MediaContent <|-- Movie
MediaContent <|-- TVShow
MediaContent <|-- Music

CommandHandler --> CatalogManager

UserInterface --> CatalogManager
UserInterface --> CommandHandler

CatalogManager --> Movie
CatalogManager --> TVShow
CatalogManager --> Music

@enduml
